[package]
name = "r2r_redis_visualization"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"
autotests = false

[profile.colcon]
inherits = "release"

[dependencies]
r2r = { git = "ssh://git@github.com/sequenceplanner/r2r.git", tag = "0.9.6" }
log = "0.4.22"
futures = "0.3.31"
micro_sp = {git = "ssh://git@github.com/endre90/micro_sp.git", branch = "master"}
tokio = { version = "1.44.2", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
tempfile = "3.19.0"